# user-sync-cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
migrations/: 0001_create_global_users.sql
src/: api.rs  cli.rs  db.rs  main.rs  models.rs  sync.rs  token.rs
