[package]
name = "user-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-sync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing  (--env reads matching env var as fallback)
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Retry with exponential backoff
tokio-retry = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# .env loader (dev convenience — ignored in production)
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"

# URL building
url = "2"